--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  solid_lints: ^0.0.19
+  provider: ^6.0.5
+  shared_preferences: ^2.2.2
+  hive: ^2.2.3
+  firebase_core: ^2.20.0
+  firebase_auth: ^4.12.0
+  cloud_firestore: ^4.12.0
+  dio: ^5.3.3
+  lottie: ^2.6.0
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +54,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  solid_lints: ^0.0.19
+  rename: ^3.0.1
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
