--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^4.12.0
   dio: ^5.3.3
   lottie: ^2.6.0
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
