--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   shared_preferences: ^2.2.2
-  hive: ^2.2.3
   firebase_core: ^2.20.0
   firebase_auth: ^4.12.0
   cloud_firestore: ^4.12.0
   dio: ^5.3.3
   lottie: ^2.6.0
   google_fonts: ^4.0.4
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
