--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   google_sign_in: ^6.1.5
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
